--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 	margin: auto;
 	width: 35%;
 	font-family: serif !important;
+	height: 260px;
 }
 
 .header {
@@ -39,9 +40,50 @@ body {
 .main h5 {
 	font-size: 14px;
 	margin: 6px;
+	font-family: Serif;	
+	color: #150;
 }
 
 .buttons {
 	display: flex;
 	justify-content: space-evenly;
+}
+
+.text-thing{
+    position: relative;
+    background-color: white;
+    z-index: 10;
+}
+
+.animated-thing{
+    position: relative;
+    overflow: hidden;
+    min-width: fit-content;
+    max-width: fit-content;
+    padding: 1rem;
+    width: 100%; !important
+}
+
+.animated-thing::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1000%;
+    height: 100%;
+    background-size: 50% 100%;
+    background-image: url(somekindaofmeow.png);
+    overflow: hidden;
+    z-index: 5;
+}
+
+.animated-thing::before{
+    animation: animate_background 1.5s linear infinite
+    
+}
+
+@keyframes animate_background {
+    to{
+        transform: translateX(-50%)
+    }
 }
