--- a/style.css
+++ b/style.css
@@ -59,9 +59,7 @@ body {
     position: relative;
     overflow: hidden;
     min-width: fit-content;
-    max-width: fit-content;
-    padding: 1rem;
-    width: 100%; !important
+    width: 100%;
 }
 
 .animated-thing::before{
@@ -70,9 +68,11 @@ body {
     top: 0;
     left: 0;
     width: 1000%;
-    height: 100%;
-    background-size: 50% 100%;
+    height: 32px;
+    background-size: 1% 100%;
     background-image: url(somekindaofmeow.png);
+	background-repeat: repeat;
+	background-origin: padding-box;
     overflow: hidden;
     z-index: 5;
 }
@@ -84,6 +84,6 @@ body {
 
 @keyframes animate_background {
     to{
-        transform: translateX(-50%)
+        transform: translateX(-5%)
     }
 }
