--- a/style.css
+++ b/style.css
@@ -77,12 +77,12 @@ body {
 }
 
 .animated-thing::before{
-    animation: animate_background 30s linear infinite
+    animation: animate_background 30s linear infinite;
     
 }
 
 @keyframes animate_background {
     to{
-        transform: translateX(-10%)
+        transform: translateX(-10%);
     }
 }
