--- a/style.css
+++ b/style.css
@@ -1,68 +1,83 @@
+* {}
+
 body {
-	background: url(bg.jpg);
-	background-size: cover;
+    background: url(bg.jpg);
+    background-size: cover;
 }
 
 .wrapper {
-	margin: auto;
-	width: 35%;
-	font-family: serif !important;
-	height: 260px;
+    margin: auto;
+    margin-top: 4%;
+    width: 35%;
+    font-family: serif !important;
+    height: 260px;
 }
 
 .header {
-	width: 100%;
-	background: url(header3.jpg);
-	background-size: cover;
-	background-position: center;
-/*flip*/
-	-webkit-transform: scaleX(-1);
+    width: 100%;
+    background: url(header3.jpg);
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 8px;
+    /*flip*/
+    -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
 
 .header p {
-	margin: 0;
-	font-family: serif;
-	text-shadow: 0 0 45px rgba(0,0,0,.8), 0 0 10px rgba(0,0,0,.8);
-	font-weight: bold;
-	font-size: 38px;
-	padding: 30px 8px 8px 8px;
-/*flip*/
-	-webkit-transform: scaleX(-1);
+    margin: 0;
+    font-family: serif;
+    text-shadow: 0 0 45px rgba(0, 0, 0, .8), 0 0 10px rgba(0, 0, 0, .8);
+    font-weight: bold;
+    font-size: 38px;
+    padding: 30px 8px 8px 8px;
+    /*flip*/
+    -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
 }
 
 .main p {
-	font-size: 13px;
-	font-family: serif;
+    font-size: 13px;
+    font-family: serif;
 }
 
 .main h5 {
-	font-size: 14px;
-	margin: 6px;
-	font-family: Serif;	
-	color: #150;
+    font-size: 14px;
+    margin: 6px;
+    font-family: Serif;
+    color: #150;
+    transition: .3s;
+}
+
+.main h5 main:hover  {
+    -webkit-box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+    background: #ECEFCF;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    transition: .3s;
 }
 
 .buttons {
-	display: flex;
-	justify-content: space-evenly;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.text-thing{
+.text-thing {
     position: relative;
     background-color: white;
     z-index: 10;
 }
 
-.animated-thing{
+.animated-thing {
     position: relative;
     overflow: hidden;
     min-width: fit-content;
-	height: 32px;
+    height: 32px;
 }
 
-.animated-thing::before{
+.animated-thing::before {
     content: "";
     position: absolute;
     top: 0;
@@ -70,18 +85,18 @@ body {
     width: 4000%;
     height: 100%;
     background-image: url(somekindaofmeow.png);
-	background-repeat: repeat;
-	background-origin: padding-box;
+    background-repeat: repeat;
+    background-origin: padding-box;
     overflow: hidden;
     z-index: 5;
 }
 
-.animated-thing::before{
+.animated-thing::before {
     animation: animate_background 60s linear infinite;
 }
 
 @keyframes animate_background {
-    to{
+    to {
         transform: translateX(-5%);
     }
 }
