--- a/style.css
+++ b/style.css
@@ -5,6 +5,17 @@ body {
     background-size: cover;
 }
 
+.addsh {
+    width: 35%;
+    margin: auto;
+    display: flex;
+    padding: 16px;
+}
+
+.addsh img {
+    margin: auto;
+}
+
 .wrapper {
     margin: auto;
     margin-top: 4%;
@@ -53,6 +64,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: row-reverse;
+    align-items: stretch;
 }
 
 .main img {
