--- a/battisstyle.css
+++ b/battisstyle.css
@@ -6,8 +6,26 @@ body {
 .ME {
 	display: flex;
 	margin: auto;
+	flex-direction: column;
 }
 
 .ME img {
+	margin: auto;
+}
+
+.ME iframe {
+	margin: auto;
+}
+
+.ME p {
+	margin: auto;
+	color: #200;
+	text-shadow: 0 0 15px rgba(255,0,0,.5), 0 0 10px rgba(255,0,0,.5);
+	font-family: 'Rubik Wet Paint', cursive;
+	font-size: 28px;
+	text-align: center;
+}
+
+.block1 {
 	margin: auto;
 }
