--- a/battisstyle2.css
+++ b/battisstyle2.css
@@ -4,6 +4,25 @@ body {
     background-position: 0px 25%;
 }
 
+p {
+    font-family: serif;
+    font-size: 14px;
+    text-shadow: 0px 0px 39px rgba(0,0,0,0.65);
+}
+
+.button {
+	margin: auto;
+	align-self: center;
+}
+
+button {
+    background: url(cloudbutton.jpg);
+    background-size: contain;
+    margin: auto;
+    align-self: center;
+    display: block;
+}
+
 .maincont {
     display: flex;
     justify-content: space-between;
@@ -13,6 +32,13 @@ body {
     width: 10%;
     display: flex;
     flex-direction: column;
+
+}
+
+h5 {
+    text-shadow: 3px 2px 0 #bbb;
+    color: #088;
+    font-size: 28px;
 
 }
 
@@ -30,12 +56,27 @@ body {
 
 }
 
+.window {
+    padding: 8px;
+    padding-bottom: 3px;
+}
+
 .main_r img {
     display: block;
 
 }
 
 .flower {
-	display: flex;
-	justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
+}
+
+.flower img {
+    display: block;
+    width: 12%;
+}
+
+.flowershtuka {
+    display: flex;
+    justify-content: center;
 }
