--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,44 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+
+.loader-container{
+    width: 100%;
+    height: 100vh;
+    background-color: #343a40;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loader{
+    width: 50px;
+    height: 50px;
+    border: 5px solid;
+    color: #bd5d38;
+    border-radius: 50%;
+    border-top-color: transparent;
+    animation: loader 1.2s linear infinite;
+}
+
+@keyframes loader{
+    25%{
+        color: #bd5d38;
+    }
+    50%{
+        color: #bd5d38;
+    }
+    75%{
+        color: #bd5d38;
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
