--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,20 @@ body {
     background-color: #AFD5AA;
 }
 
+.linein {
+	width: 80%;
+    height: 100%;
+	background: #7871AA;
+}
+
+.line {
+	margin: 1.4vh 0 1.4vh 0; 
+	width: 100%;
+    height: 0.16rem;
+    justify-content: center;
+    display: flex;
+}
+
 /*to do: 
 	- hotdog theme
 	- selection
