--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,71 @@
+
+
 body {
-	background: #E0C7FA;
+    background: #E0C7FA;
+    color: #242038;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+
+a {
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+	color: inherit;
+    text-decoration: none;
+}
+
+a:focus {
+	color: #8580B3;	
+    text-decoration: none;	
+}
+
+a:hover {
+	color: #8580B3;
+    text-decoration: none;		
+}
+
+a:active {
 	color: #242038;
+    text-decoration: none;	
+}
+
+.DOS a:link {
+	color: #f0f;
+    text-decoration: none;
+}
+
+.DOS a:visited {
+	color: #8000ff;
+    text-decoration: none;
+}
+
+.DOS a:focus {
+	color: #fff;
+    text-decoration: none;	
+}
+
+.DOS a:hover {
+	color: #fff;
+    text-decoration: none;		
+}
+
+.DOS a:active {
+	color: #f0f;
+    text-decoration: none;	
+}
+
+.wrapper {
+	width: 80%;
 }
 
 .headtextuwu  {
@@ -44,8 +109,18 @@ body {
     background-color: #AFD5AA;
 }
 
+.DOS::selection {
+    color: #000;
+    background: #808080;
+}
+
+.DOS a::selection {
+    color: #000;
+    background: #808080;
+}
+
 .linein {
-	width: 80%;
+	width: 100%;
     height: 100%;
 	background: #7871AA;
 }
@@ -58,7 +133,54 @@ body {
     display: flex;
 }
 
+.DOS {
+	font-family: 'more_perfect_dos_vgaregular';
+	background: #000;
+	color: #808080;
+	margin: 0;
+	margin-left: 6px;
+}
+
+.main {
+	width: 100%;
+	display: flex;
+	justify-content: start;
+
+}
+
+
+
+.path {
+	align-self: flex-end;
+	background: #000;
+	width: 100%;
+	margin: 0;
+}
+
+.navv {
+	width: 100%;
+	    color: #242038;
+	    	font-family: 'IBM Plex Mono', monospace;
+	    		padding: 0;
+	    			font-weight: 600;
+	    				
+}
+
+.navv p {
+	text-align: center;
+	margin: 0;
+}
+
+@font-face {
+    font-family: 'more_perfect_dos_vgaregular';
+    src: url('fonts/moreperfectdosvga-webfont.woff2') format('woff2'),
+         url('fonts/moreperfectdosvga-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 /*to do: 
 	- hotdog theme
 	- selection
-	- */
+	- pointer */
